# media-crawler-mcp-service

./: .env  .env.example  .gitignore  .gitmodules  Agent.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  sidecar_main.py
.qoder/: settings.json
app/: api_service.py
app/admin/: README.md  __init__.py
app/admin/routes/: __init__.py  config.py  login.py  status.py
app/admin/static/css/: admin.css
app/admin/static/js/: admin-enhanced.js  admin.js  mcp_inspector.js
app/admin/templates/: config.html  dashboard.html  inspector.html  layout-sidebar.html  layout.html  login.html
app/api/endpoints/: __init__.py  base.py
app/api/endpoints/admin/: __init__.py  admin_page_endpoint.py  analyze_endpoint.py  config_endpoint.py  dashboard_endpoint.py  mcp_inspector_endpoint.py  publish_endpoint.py  status_endpoint.py
app/api/endpoints/login/: __init__.py  login_endpoint.py
app/api/endpoints/mcp/: __init__.py  base.py  bilibili.py  kuaishou.py  tieba.py  weibo.py  xhs.py  xiaohongshu.py  zhihu.py
app/api/endpoints/sidecar/: __init__.py  sidecar_endpoint.py
app/api/scheme/: __init__.py  base_responses.py  base_scheme.py  bilibili_scheme.py  error_codes.py  errors.py  login_scheme.py  xhs_scheme.py
app/api/scheme/request/: analyze_scheme.py  bilibili_scheme.py  publish.py  xhs_scheme.py
app/api/scheme/response/: __init__.py  analyze_response.py  bilibili.py  publish.py  xhs.py
app/config/: platform_config.py  settings.py
app/core/: bilibili.py  browser_manager.py  browser_pool.py  login_service.py  media_crawler_service.py  service.py  session_manager.py
app/core/client/: media_crawler_client.py
app/core/crawler/: __init__.py
app/core/crawler/model/: m_xiaohongshu.py
app/core/crawler/proxy/: base_proxy.py  proxy_ip_pool.py
app/core/crawler/proxy/providers/: __init__.py  kuaidl_proxy.py  wandou_http_proxy.py
app/core/crawler/store/bilibili/: __init__.py  _store_impl.py  bilibilli_store_media.py
app/core/crawler/store/xhs/: __init__.py  store.py  store_impl.py  xhs_store_media.py
app/core/crawler/tools/: __init__.py  async_file_writer.py  crawler_util.py  utils.py
app/core/login/: __init__.py  base.py  browser_manager.py  exceptions.py  models.py  service.py  storage.py
app/core/login/bilibili/: __init__.py  adapter.py  login.py
app/core/login/xhs/: __init__.py  adapter.py  login.py
app/core/mcp/: __init__.py  bilibili.py  client.py  xhs.py
app/core/mcp_tools/: __init__.py  bilibili.py  service.py  xhs.py
app/core/mcp_tools/schemas/: __init__.py  bilibili.py  xhs.py
app/core/prompts/: __init__.py
app/core/resources/: __init__.py
app/core/tools/: __init__.py  bilibili.py
app/crawler/proxy/: proxy_ip_pool.py
app/crawler/proxy/providers/: __init__.py  kuaidl_proxy.py  wandou_http_proxy.py
app/crawler/store/bilibili/: __init__.py  _store_impl.py
app/crawler/tools/: crawler_util.py
app/mcp/resources/: __init__.py
app/mcp/tools/media_crawler/: __init__.py  db_bridge.py  wrapper.py
app/pages/: __init__.py  admin_config.py  admin_dashboard.py  admin_inspector.py  admin_login.py  admin_publish.py  ui_base.py
app/pages/js/: config.js  dashboard.js  inspector.js  login.js  publish.js
app/providers/: authentication.py  logger.py
app/providers/cache/: cache_factory.py  queue.py  redis_cache.py
app/providers/models/: __init__.py  base_model.py  bilibili.py
data/bili/json/: creator_comments_2025-10-20.json  creator_contents_2025-10-20.json  creator_contents_2025-10-22.json  creator_creators_2025-10-20.json  creator_creators_2025-10-22.json  detail_comments_2025-10-20.json  detail_contents_2025-10-20.json  detail_contents_2025-10-22.json  detail_creators_2025-10-20.json  detail_creators_2025-10-22.json  search_comments_2025-10-20.json  search_comments_2025-10-21.json  search_contents_2025-10-20.json  search_contents_2025-10-21.json  search_contents_2025-10-22.json  search_creators_2025-10-20.json  search_creators_2025-10-21.json  search_creators_2025-10-22.json
deploy/: Dockerfile  Dockerfile.sidecar  README.md  docker-compose.yml  nginx.conf  start.sh
