[tool.poetry]
name = "media-crawler-mcp-service"
version = "0.1.0"
description = "MediaCrawler 的社交媒体爬虫功能暴露为 MCP 协议工具"
authors = ["yancyyu <yancyyu.ok@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}, {include = "common_sdk"}]

[tool.poetry.dependencies]
python = "^3.11"
# FastMCP & Web Framework
asyncpg = "^0.30.0"
fastmcp = "*"
httpx = "^0.27.0"
jinja2 = "^3.1.0"
loguru = "^0.7.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.1.1"
python-multipart = "^0.0.20"
pyyaml = "^6.0.0"
redis = "^5.0.0"
tortoise-orm = "^0.21.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
websockets = "^13.0"
aiofiles = "^24.1.0"
qrcode = {extras = ["pil"], version = "^7.4.2"}
pillow = "^10.0.0"
psutil = "^5.9.0"

# Media Crawler Dependencies (from media_crawler/pyproject.toml)
aiomysql = "0.2.0"
aiosqlite = ">=0.17.0,<0.18.0"  # 兼容 tortoise-orm 0.21.x
alembic = ">=1.16.5"
asyncmy = ">=0.2.10"
cryptography = ">=45.0.7"
fastapi = "0.110.2"
jieba = "0.42.1"
matplotlib = "3.9.0"
opencv-python = ">=4.11.0.86"
pandas = "2.2.3"
parsel = "1.9.1"
playwright = ">=1.49.0"
pyexecjs = "1.5.1"
pyhumps = ">=3.8.0"
requests = "2.32.3"
sqlalchemy = ">=2.0.43"
tenacity = "8.2.2"
typer = ">=0.12.3"
wordcloud = "1.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.7.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app", "media_crawler"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

